--- a/TaxFree/TaxFree/Base.lproj/Main.storyboard
+++ b/TaxFree/TaxFree/Base.lproj/Main.storyboard
@@ -86,6 +86,7 @@
                     <connections>
                         <outlet property="activityIndicator" destination="Fli-q3-Cjt" id="Q1P-ld-h8i"/>
                         <outlet property="barProgress" destination="X0Y-le-Ewb" id="8wo-l2-gqn"/>
+                        <outlet property="currencyConverterLabel" destination="6fy-xp-S0D" id="MVl-QD-pSQ"/>
                         <outlet property="dataDownloadingLabel" destination="Fl0-Kr-C5x" id="oRw-rb-zjN"/>
                         <outlet property="test" destination="p5R-bd-EfL" id="9dO-9l-HYY"/>
                     </connections>
@@ -103,7 +104,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <searchBar key="tableHeaderView" contentMode="redraw" id="WdV-Dn-ky9">
-                            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                            <rect key="frame" x="0.0" y="0.0" width="226" height="44"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             <textInputTraits key="textInputTraits"/>
                         </searchBar>
@@ -408,18 +409,22 @@
                     </view>
                     <connections>
                         <outlet property="animateLabel" destination="pFO-2d-7aZ" id="w0b-D9-zBD"/>
+                        <outlet property="calculateSubLabel" destination="rN2-R2-WkS" id="mRl-cE-BPi"/>
                         <outlet property="calculateView" destination="n7U-wX-upX" id="big-cj-p0L"/>
+                        <outlet property="calculatorImage" destination="OVd-6Z-Jlv" id="QNh-Y8-rkf"/>
                         <outlet property="countryRulesButton" destination="SkO-Il-HS8" id="aBD-y3-pTg"/>
+                        <outlet property="currencyConverterLabel" destination="0zl-QZ-U72" id="h4G-4z-yrW"/>
                         <outlet property="refundCalcButton" destination="5mK-xi-Xrg" id="Ld9-zq-e5Z"/>
+                        <outlet property="subTitleLabel" destination="FOh-Y1-p2e" id="TF1-no-qfg"/>
                         <outlet property="vatCountryRulesView" destination="TCb-Da-DOe" id="ZtI-4W-Ewm"/>
                         <segue destination="cdm-Nd-U6T" kind="show" identifier="choose_your_country" id="K6z-JU-rzU"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="234.375" y="67.605633802816897"/>
+            <point key="canvasLocation" x="233.33333333333334" y="66.964285714285708"/>
         </scene>
-        <!--YOUR COUNTRY-->
+        <!--Countries View Controller-->
         <scene sceneID="wCp-mo-Bw9">
             <objects>
                 <tableViewController id="0Kc-f6-qQN" customClass="CountriesViewController" customModule="TaxFree" customModuleProvider="target" sceneMemberID="viewController">
@@ -463,7 +468,8 @@
                             <outlet property="delegate" destination="0Kc-f6-qQN" id="Smp-kP-iuY"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="YOUR COUNTRY" id="JNG-EA-cDS">
+                    <navigationItem key="navigationItem" id="JNG-EA-cDS">
+                        <barButtonItem key="backBarButtonItem" title="COUNTRIES" id="OcV-Br-uTP"/>
                         <barButtonItem key="rightBarButtonItem" title="Item" image="header__close_button_959643.png" width="10" style="done" id="DuU-Ud-JM2">
                             <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
@@ -472,6 +478,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="barButtonTitleLabel" destination="JNG-EA-cDS" id="ckJ-zb-Iir"/>
                         <outlet property="closeItemButton" destination="DuU-Ud-JM2" id="sy4-jJ-rVu"/>
                         <segue destination="ofR-qM-t6B" kind="show" identifier="to_choose_currency_vc" id="pB2-ma-5A2"/>
                     </connections>
@@ -527,6 +534,69 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FlP-BN-vra" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2494" y="68"/>
+        </scene>
+        <!--Favourites View Controller-->
+        <scene sceneID="lk5-H8-EXa">
+            <objects>
+                <tableViewController storyboardIdentifier="favourites_vc" id="jtv-c2-LiE" customClass="FavouritesViewController" customModule="TaxFree" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="70" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="ki8-B3-7Dd">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
+                        <navigationBar key="tableHeaderView" contentMode="scaleToFill" id="hWk-Nu-hre">
+                            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <color key="barTintColor" red="0.054760131975304306" green="0.058399808577361427" blue="0.064201534040011943" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                            <textAttributes key="titleTextAttributes">
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </textAttributes>
+                            <items>
+                                <navigationItem title="Favourites" id="3hd-wJ-29E">
+                                    <barButtonItem key="rightBarButtonItem" image="header__close_button_959643.png" id="uS4-YT-ZRS">
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <connections>
+                                            <action selector="closeButtonClicked:" destination="jtv-c2-LiE" id="n0c-ne-U0w"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </navigationItem>
+                            </items>
+                        </navigationBar>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" textLabel="h0P-Ta-OVe" detailTextLabel="phO-7C-XUI" rowHeight="70" style="IBUITableViewCellStyleSubtitle" id="2tX-2v-OJj">
+                                <rect key="frame" x="0.0" y="72" width="320" height="70"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="2tX-2v-OJj" id="jJT-G9-QcY">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="69.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="h0P-Ta-OVe">
+                                            <rect key="frame" x="16" y="15" width="33.5" height="20.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="phO-7C-XUI">
+                                            <rect key="frame" x="16" y="38.5" width="44" height="14.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                                <color key="backgroundColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="jtv-c2-LiE" id="BNV-2V-os3"/>
+                            <outlet property="delegate" destination="jtv-c2-LiE" id="Rig-nS-88h"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VOb-Lc-qV6" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3241" y="767"/>
         </scene>
         <!--CALCULATOR-->
         <scene sceneID="ROl-1I-uR0">
